--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
-<!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>QR Code Scan Box</title>
-   <link rel="stylesheet" href="style.css">
- </head>
-  <body>
-   <div class="container">
-     <div class="box cover">
-       <div class="top-section">
-       <img src="image/scan1.png" alt="scan" class="scan-image">
-       </div>
-       <div class="bottom-section">
-   <h3>Improve your front-end skills by building projects</h3>
-   <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-       </div>
-     </div>
-   </div>
- </body>
- </html>
- 
+
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Qr code component main</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="outer-box">
+    <div class="box">
+      <div class="box-top">
+        <img src="image/scan1.png" alt="Scan Image" class="scan-image" />
+      </div>
+      <div class="box-bottom">
+      <h2>Improve your front-end skills by building projects</h2>
+      
+      <p>Scan the QR code to visit 
+        Frontend Mentor and take your coding skills to <br> the next level</p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
+  
